# interactive-html-bom-rs

./: CHANGELOG.md  Cargo.toml  README.md  update_web_files.sh
.github/workflows/: ci.yml  stylecheck.sh
.reuse/: dep5
LICENSES/: MIT.txt
src/: lib.rs
src/web/: version.txt
tests/: integration_test.rs
