[package]
name = "interactive-html-bom"
description = "Interactive HTML BOM Generator"
keywords = ["pcb", "eda", "bom"]
repository = "https://github.com/LibrePCB/interactive-html-bom-rs"
documentation = "https://docs.rs/interactive-html-bom/"
readme = "README.md"
license = "MIT"
version = "0.2.0"
edition = "2021"
exclude = ["/.git*", "/.reuse/", "/.rustfmt.toml", "/LICENSES/", "*.sh"]

[features]
fail-on-warnings = []

[dependencies]
jzon = "0.12.5"
lz-str = "0.2.1"
